Fixing bugs on mobile menu and edit scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,17 @@
   --text-color-5: #d4d4d4;
 }
 
+/* ----------- SCROLLBAR ------------------ */
+::-webkit-scrollbar {
+  width: .5rem;
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: var(--color-3); 
+  border-radius: 1rem
+  ;
+}
+
 /* ----------- BASE ------------------ */
 button {
   background: none;
@@ -69,15 +80,15 @@ button {
 header {
   padding: 2rem 0;
   width: 100%;
+  top: -2rem;
 }
 
 .fixed-header{
   position: fixed;
-  top: 0;
-}
-
-.fixed-header + .adress{
-  padding-top: 8rem;
+  -webkit-box-shadow: 0px -20px 30px 20px rgba(54,54,54,0.3);
+  -moz-box-shadow: 0px -20px 30px 20px rgba(54,54,54,0.3);
+  box-shadow: 0px -20px 30px 20px rgba(54,54,54,0.3);
+  animation: showMenuMobile 200ms ease forwards;
 }
 
 header .container {
@@ -172,7 +183,7 @@ a.selected {
   top: -5rem;
   background-color: var(--primary-color);
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   opacity: 0;
   display: none;
 }
@@ -180,6 +191,8 @@ a.selected {
 .show-menu-mobile {
   display: block;
   animation: showMenuMobile 0.25s ease forwards;
+  height: 100%;
+  overflow: auto;
 }
 
 .menu-mobile ul {
